// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal does not show the close button if \`shouldHideCloseButton\` is true 1`] = `
<Modal
  onCloseClick={[Function]}
  shouldHideCloseButton={true}
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a basic modal 1`] = `
<Modal
  onCloseClick={[Function]}
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a basic modal with content 1`] = `
<Modal
  onCloseClick={[Function]}
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            >
                              <p>
                                Hi there!
                              </p>
                              <button
                                type="button"
                              >
                                Submit
                              </button>
                            </div>
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        >
                          <p>
                            Hi there!
                          </p>
                          <button
                            type="button"
                          >
                            Submit
                          </button>
                        </div>
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a medium height modal 1`] = `
<Modal
  heightAboveSmall="medium"
  isOpen={true}
  onCloseClick={[Function]}
>
  <ModalAnimatedWrapper
    heightAboveSmall="medium"
    isOpen={true}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={true}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="entered"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root rootOpen curtain curtainOpen"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperOpen wrapperMedium wrapperHeightMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <NoScroll />
              <div
                className="root rootOpen curtain curtainOpen"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperOpen wrapperMedium wrapperHeightMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a narrow modal 1`] = `
<Modal
  onCloseClick={[Function]}
  width="narrow"
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="narrow"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperNarrow wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperNarrow wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a tall height modal 1`] = `
<Modal
  heightAboveSmall="tall"
  isOpen={true}
  onCloseClick={[Function]}
>
  <ModalAnimatedWrapper
    heightAboveSmall="tall"
    isOpen={true}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={true}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="entered"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root rootOpen curtain curtainOpen"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperOpen wrapperMedium wrapperHeightTall wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <NoScroll />
              <div
                className="root rootOpen curtain curtainOpen"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperOpen wrapperMedium wrapperHeightTall wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal renders a wide modal 1`] = `
<Modal
  onCloseClick={[Function]}
  width="wide"
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="wide"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperWide wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperWide wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`Modal shows the close button if \`shouldHideCloseButton\` is false 1`] = `
<Modal
  onCloseClick={[Function]}
  shouldHideCloseButton={false}
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`ModalContent renders contents 1`] = `
<ModalContent>
  <div
    className="modalContent"
  >
    Goose
  </div>
</ModalContent>
`;

exports[`ModalDescription renders a basic description 1`] = `
<ModalDescription>
  <div
    className="modalDescription"
  >
    Goose
  </div>
</ModalDescription>
`;

exports[`ModalFooter renders a non-sticky footer 1`] = `
<ModalFooter
  isSticky={false}
>
  <div
    className="modalFooterFluid"
  >
    Goose
  </div>
</ModalFooter>
`;

exports[`ModalFooter renders a sticky footer 1`] = `
<Modal
  onCloseClick={[Function]}
>
  <ModalAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={false}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        onCloseClick={[Function]}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding"
                            />
                          </div>
                          <div>
                            <div
                              class="root"
                            >
                              Goose
                            </div>
                          </div>
                          <div
                            class="closeButton"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              data-test="close-modal"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex={-1}
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding"
                        >
                          <ModalFooter
                            isSticky={true}
                          >
                            <Portal
                              containerInfo={
                                <div>
                                  <div
                                    class="root"
                                  >
                                    Goose
                                  </div>
                                </div>
                              }
                            >
                              <StickyFooter
                                setSticky={[Function]}
                              >
                                <div
                                  className="root"
                                >
                                  Goose
                                </div>
                              </StickyFooter>
                            </Portal>
                          </ModalFooter>
                        </div>
                      </div>
                      <div />
                      <div
                        className="closeButton"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          dataTest="close-modal"
                          iconLeft={
                            <svg
                              className="closeButtonIcon"
                              fill="none"
                              height="18"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                              strokeWidth="3"
                              viewBox="0 0 24 24"
                              width="18"
                            >
                              <line
                                x1="18"
                                x2="6"
                                y1="6"
                                y2="18"
                              />
                              <line
                                x1="6"
                                x2="18"
                                y1="6"
                                y2="18"
                              />
                            </svg>
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            dataTest="close-modal"
                            iconLeft={
                              <svg
                                className="closeButtonIcon"
                                fill="none"
                                height="18"
                                stroke="currentColor"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth="3"
                                viewBox="0 0 24 24"
                                width="18"
                              >
                                <line
                                  x1="18"
                                  x2="6"
                                  y1="6"
                                  y2="18"
                                />
                                <line
                                  x1="6"
                                  x2="18"
                                  y1="6"
                                  y2="18"
                                />
                              </svg>
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              data-test="close-modal"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <svg
                                  className="closeButtonIcon"
                                  fill="none"
                                  height="18"
                                  stroke="currentColor"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth="3"
                                  viewBox="0 0 24 24"
                                  width="18"
                                >
                                  <line
                                    x1="18"
                                    x2="6"
                                    y1="6"
                                    y2="18"
                                  />
                                  <line
                                    x1="6"
                                    x2="18"
                                    y1="6"
                                    y2="18"
                                  />
                                </svg>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalAnimatedWrapper>
</Modal>
`;

exports[`ModalHeader renders a basic header 1`] = `
<ModalHeader>
  <div
    className="modalHeader"
  >
    Goose
  </div>
</ModalHeader>
`;

exports[`ModalTitle renders a basic title 1`] = `
<ModalTitle>
  <div
    className="modalTitle"
  >
    Goose
  </div>
</ModalTitle>
`;
